CVS code -
- nano.c:
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)

GNU nano 1.3.7 - 2005.04.10
- General:
	- Miscellaneous comment fixes. (DLR)
	- After (re)initializing the terminal, make sure the cursor is
	  always turned on.  Changes to do_alt_speller(),
	  handle_sigwinch(), and main(). (DLR)
	- Make sure that all references to cut-to-end are left out when
	  NANO_SMALL is defined.  Changes to cut_to_eol(),
	  do_cut_text(), and do_statusbar_cut_text(). (DLR)
- chars.c:
  make_mbchar()
	- Remove unneeded assert. (DLR)
  move_mbleft()
	- Fix assert to reference the proper variable, so that nano
	  builds with DEBUG defined again. (Mike Frysinger, found by
	  Dmitri Vassilenko)
- files.c:
  do_insertfile()
	- Fix problem where going into the help browser at the "Insert
	  File" prompt would always result in the current answer's being
	  used as the filename afterward. (DLR)
  get_full_path()
	- Rework handling of the results of getcwd() in order to avoid
	  segfaults if they fail, and to remove uses of the nonportable
	  GNU extension where passing a size of 0 will get a string as
	  long as we need. (DLR)
  do_browser()
	- Rename variable lineno to fileline to avoid confusion. (DLR)
  do_browse_from()
	- Rework handling of the results of getcwd() in order to avoid
	  segfaults if they fail, and to remove uses of the nonportable
	  GNU extension where passing a size of 0 will get a string as
	  long as we need. (DLR)
- nano.c:
  help_init()
	- When calculating allocsize, take multibyte characters into
	  account, and keep the column number limits consistent. (DLR)
	- Break htx up into three chunks, in case the string is too long
	  for the compiler to handle (e.g. an ISO C89 compiler that can
	  only handle up to 509 characters). (DLR)
	- Minor wording fixes. (DLR)
  print1opt()
	- Don't include longflag if HAVE_GETOPT_LONG isn't defined.